--- a/astrosetu/package.json
+++ b/astrosetu/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@sentry/nextjs": "^8.0.0",
     "@supabase/supabase-js": "^2.89.0",
+    "@types/node": "20.17.6",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
     "autoprefixer": "10.4.20",
     "clsx": "2.1.1",
     "next": "14.2.18",
@@ -21,14 +24,11 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwindcss": "3.4.15",
+    "typescript": "5.6.3",
     "zod": "3.23.8"
   },
   "devDependencies": {
-    "@types/node": "20.17.6",
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1",
     "eslint": "8.57.1",
-    "eslint-config-next": "14.2.18",
-    "typescript": "5.6.3"
+    "eslint-config-next": "14.2.18"
   }
 }
