Fix Prokerala API errors and enhance data extraction
- Fix dosha endpoint 404 error by extracting dosha from kundli response first
- Add ascendant calculation from coordinates and birth time when missing
- Add tithi calculation from date when missing from API response
- Enhance planet extraction from nakshatra_details (soorya_rasi, chandra_rasi)
- Improve error handling and fallback strategies
- Add service worker for push notifications
- Enhance notification settings page with better error messages
- Update dosha transformation to handle embedded dosha data in kundli responses

--- a/astrosetu/.gitignore
+++ b/astrosetu/.gitignore
@@ -63,3 +63,12 @@ test-results/
 *.tmp
 *.temp
 
+# Large files and archives
+*.zip
+*.tar.gz
+*.rar
+*testing*.zip
+*package*.zip
+astrosetu-gpt-testing.zip
+AstroSetu_Testing_Package_*.zip
+
