--- a/astrosetu/package.json
+++ b/astrosetu/package.json
@@ -19,6 +19,7 @@
     "next": "14.2.18",
     "otplib": "^12.0.1",
     "postcss": "8.4.49",
+    "jspdf": "^2.5.1",
     "qrcode": "^1.5.3",
     "razorpay": "^2.9.6",
     "react": "18.3.1",
