Configure Vercel for preview-only deployments
- Disabled production deployments from main branch in vercel.json
- Added VERCEL_PREVIEW_CONFIG.md with detailed instructions
- Added disable-production.sh script for easy configuration
- Production deployments now disabled, preview environments enabled

--- a/astrosetu/vercel.json
+++ b/astrosetu/vercel.json
@@ -4,6 +4,11 @@
   "installCommand": "npm ci",
   "framework": "nextjs",
   "regions": ["bom1"],
+  "git": {
+    "deploymentEnabled": {
+      "main": false
+    }
+  },
   "env": {
     "NODE_ENV": "production"
   },
