--- a/astrosetu/vercel.json
+++ b/astrosetu/vercel.json
@@ -4,6 +4,7 @@
   "installCommand": "npm ci",
   "framework": "nextjs",
   "regions": ["bom1"],
+  "ignoreCommand": "[ \"$VERCEL_GIT_COMMIT_REF\" = \"main\" ]",
   "env": {
     "NODE_ENV": "production"
   },
