--- a/astrosetu/vercel.json
+++ b/astrosetu/vercel.json
@@ -4,7 +4,7 @@
   "installCommand": "npm ci",
   "framework": "nextjs",
   "regions": ["bom1"],
-  "ignoreCommand": "[ \"$VERCEL_GIT_COMMIT_REF\" = \"main\" ]",
+  "ignoreCommand": "[ \"$VERCEL_GIT_COMMIT_REF\" = \"main\" ] && exit 0 || exit 1",
   "env": {
     "NODE_ENV": "production"
   },
