--- a/astrosetu/package.json
+++ b/astrosetu/package.json
@@ -23,6 +23,7 @@
     "qrcode": "^1.5.3",
     "razorpay": "^2.9.6",
     "react": "18.3.1",
+    "stripe": "^14.21.0",
     "react-dom": "18.3.1",
     "tailwindcss": "3.4.15",
     "typescript": "5.6.3",
