feat: Enhance AI Astrology section per ChatGPT feedback
- Make Year Analysis the hero report (most chosen)
- Add Complete Life Decision Pack bundle (Marriage + Career + Year)
- Move bundles to top with visual prominence
- Add trust ladder section explaining accuracy
- Shorten preview content to 35% (from 65%)
- Fix mobile issues: header CTA, collapsible legal sections
- Update PWA manifest start URL
- Fix all build errors (unescaped quotes, bundle types)

Build: ✅ Successful
All enhancements implemented and tested

--- a/astrosetu/public/manifest.json
+++ b/astrosetu/public/manifest.json
@@ -2,7 +2,7 @@
   "name": "AstroSetu - Cosmic Guidance",
   "short_name": "AstroSetu",
   "description": "Complete astrology platform with AI-powered insights: Generate Kundli, match compatibility, horoscopes, and chat with expert astrologers",
-  "start_url": "/",
+  "start_url": "/ai-astrology",
   "display": "standalone",
   "background_color": "#0f172a",
   "theme_color": "#6366f1",
