--- a/astrosetu/package.json
+++ b/astrosetu/package.json
@@ -12,19 +12,21 @@
     "@sentry/nextjs": "^8.0.0",
     "@supabase/supabase-js": "^2.89.0",
     "@types/node": "20.17.6",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
     "autoprefixer": "10.4.20",
     "clsx": "2.1.1",
+    "jspdf": "^2.5.1",
     "next": "14.2.18",
+    "nodemailer": "^7.0.12",
     "otplib": "^12.0.1",
     "postcss": "8.4.49",
-    "jspdf": "^2.5.1",
     "qrcode": "^1.5.3",
     "razorpay": "^2.9.6",
     "react": "18.3.1",
-    "stripe": "^14.25.0",
     "react-dom": "18.3.1",
+    "stripe": "^14.25.0",
     "tailwindcss": "3.4.15",
     "typescript": "5.6.3",
     "zod": "3.23.8"
