--- a/astrosetu/package.json
+++ b/astrosetu/package.json
@@ -15,6 +15,7 @@
     "@types/nodemailer": "^7.0.4",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
+    "@vercel/functions": "^3.3.4",
     "autoprefixer": "10.4.20",
     "clsx": "2.1.1",
     "jspdf": "^2.5.1",
