Fix timer stuck issue, retry button functionality, and add breaking changes prevention
- Fix timer stuck at 0s for all report types (free, paid, bundles)
  - Simplified timer logic to use captured state value pattern
  - Ensures timer counts correctly from generation start

- Fix retry button not working for free reports
  - Updated handleRetryLoading to get reportId from URL params directly
  - Added regeneration logic for free reports when not found in storage

- Add breaking changes prevention safeguards
  - Added npm verify script (type-check + build)
  - Created comprehensive documentation and checklists
  - Added pre-commit hook template

All automated checks passing. Timer and retry functionality verified.

--- a/astrosetu/package.json
+++ b/astrosetu/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "type-check": "tsc --noEmit",
+    "verify": "npm run type-check && npm run build",
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start -p 3001",
