--- a/astrosetu/package.json
+++ b/astrosetu/package.json
@@ -8,7 +8,11 @@
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start -p 3001",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug"
   },
   "dependencies": {
     "@sentry/nextjs": "^8.0.0",
@@ -35,6 +39,7 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.18"
   }
