Add comprehensive test pyramid and fix timer defects
- Implement complete test pyramid: unit (70%), integration (20%), E2E (10%)
- Add 110+ unit tests for components and utilities
- Add 15+ integration tests for API routes
- Fix timer stuck at 0s defect
- Fix timer stuck at 19s/25s/26s defects
- Fix timer resetting to 0 defect
- Add timer logic unit and integration tests
- Update timer useEffect to use refs instead of state dependencies
- Preserve timer start time across state changes
- Add comprehensive test documentation and guides

--- a/astrosetu/package.json
+++ b/astrosetu/package.json
@@ -9,10 +9,18 @@
     "build": "next build",
     "start": "next start -p 3001",
     "lint": "next lint",
+    "test": "vitest",
+    "test:unit": "vitest run tests/unit",
+    "test:unit:watch": "vitest tests/unit",
+    "test:unit:coverage": "vitest run tests/unit --coverage",
+    "test:integration": "vitest run tests/integration",
+    "test:integration:watch": "vitest tests/integration",
+    "test:all-layers": "bash tests/run-all-tests.sh",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
-    "test:e2e:debug": "playwright test --debug"
+    "test:e2e:debug": "playwright test --debug",
+    "test:all": "npm run test:unit && npm run test:e2e"
   },
   "dependencies": {
     "@sentry/nextjs": "^8.0.0",
@@ -40,7 +48,14 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^1.1.0",
     "eslint": "8.57.1",
-    "eslint-config-next": "14.2.18"
+    "eslint-config-next": "14.2.18",
+    "jsdom": "^23.0.1",
+    "vitest": "^1.1.0"
   }
 }
