--- a/astrosetu/package.json
+++ b/astrosetu/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@sentry/nextjs": "^8.0.0",
     "@supabase/supabase-js": "^2.89.0",
-    "@types/node": "20.17.6",
+    "@types/node": "^20.19.0",
     "@types/nodemailer": "^7.0.4",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
@@ -52,10 +52,10 @@
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
     "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "^1.1.0",
+    "@vitest/coverage-v8": "^2.1.0",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.18",
     "jsdom": "^23.0.1",
-    "vitest": "^1.1.0"
+    "vitest": "^2.1.0"
   }
 }
