--- a/astrosetu/vercel.json
+++ b/astrosetu/vercel.json
@@ -1,11 +1,19 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "(bash scripts/regression-check.sh || echo '⚠️ Regression check warning') && (bash scripts/vercel-build.sh || npm run build)",
   "devCommand": "npm run dev",
-  "installCommand": "npm ci",
+  "installCommand": "npm install --legacy-peer-deps --no-audit --no-fund || npm install --legacy-peer-deps --force --no-audit --no-fund",
   "framework": "nextjs",
   "regions": ["bom1"],
   "env": {
-    "NODE_ENV": "production"
+    "NODE_ENV": "production",
+    "CI": "true"
+  },
+  "build": {
+    "env": {
+      "NODE_ENV": "production",
+      "CI": "true",
+      "SKIP_ENV_VALIDATION": "true"
+    }
   },
   "headers": [
     {
