Fix: Implement ChatGPT latest feedback - critical production fixes
- Fix startTime initialization when loader becomes visible via session_id/reportId
- Add critical invariant E2E tests (4 tests)
- Create critical test gate (npm run test:critical)
- Update operating manual with new non-negotiables and workflows
- Add mandatory prompt template and hard boundary checklist

Fixes:
- Timer stuck at 0s when resuming via session_id (exact production bug)
- Missing critical tests that prevent regressions
- No enforcement of critical tests before merge

Pending (non-blocking):
- Migrate year-analysis/bundle/paid to use controller (partial - only free uses controller)

Tests:
- tests/e2e/critical-invariants.spec.ts (NEW - 4 critical tests)
- test:critical script added to package.json

--- a/astrosetu/package.json
+++ b/astrosetu/package.json
@@ -24,6 +24,7 @@
     "test:e2e:debug": "playwright test --debug",
     "test:all": "npm run test:unit && npm run test:e2e",
     "test:regression": "vitest run tests/regression",
+    "test:critical": "playwright test tests/e2e/critical-invariants.spec.ts",
     "regression-check": "bash scripts/regression-check.sh",
     "pre-deploy": "npm run type-check && npm run build && npm run test:regression"
   },
