Fix: Build failure - incorrect import path + build safety guardrails
Build Fix:
- Fix import path in prompts.ts: ../../time/ → ../time/ (correct relative path)
- Build now passes successfully

Build Safety Guardrails:
- Add BUILD_SAFETY_GUIDE.md with 6 non-negotiables
- Add ci:critical script (type-check + build + test:build-imports)
- Add prepush script (type-check + build)
- Add test:build-imports script (validates critical imports)
- Add build-imports.test.ts (catches missing modules before Vercel)
- Update CURSOR_OPERATING_MANUAL.md with build safety non-negotiables
- Update CURSOR_WORKFLOW_CONTROL.md with build safety check step

Build Safety Non-Negotiables:
1. No new imports unless target file exists
2. No ../../ imports in src/lib - use @/ alias or correct relative path
3. No require() in TypeScript library files - use ES imports
4. Always run build before committing (npm run ci:critical)
5. Add/update critical import test
6. Production build gate (ci:critical must pass)

Files Modified:
- src/lib/ai-astrology/prompts.ts (fix import path)
- package.json (add ci:critical, prepush, test:build-imports)
- CURSOR_OPERATING_MANUAL.md (build safety non-negotiables)
- CURSOR_WORKFLOW_CONTROL.md (build safety check step)
- BUILD_SAFETY_GUIDE.md (NEW - complete guide)
- tests/integration/build-imports.test.ts (NEW - critical import test)

Verification:
- ✅ npm run type-check: PASSED
- ✅ npm run build: PASSED
- ✅ npm run test:build-imports: PASSED
- ✅ npm run ci:critical: PASSED

--- a/astrosetu/package.json
+++ b/astrosetu/package.json
@@ -25,6 +25,9 @@
     "test:all": "npm run test:unit && npm run test:e2e",
     "test:regression": "vitest run tests/regression",
     "test:critical": "playwright test tests/e2e/critical-invariants.spec.ts",
+    "test:build-imports": "vitest run tests/integration/build-imports.test.ts",
+    "ci:critical": "npm run type-check && npm run build && npm run test:build-imports",
+    "prepush": "npm run type-check && npm run build",
     "regression-check": "bash scripts/regression-check.sh",
     "pre-deploy": "npm run type-check && npm run build && npm run test:regression"
   },
