--- a/astrosetu/package.json
+++ b/astrosetu/package.json
@@ -24,9 +24,10 @@
     "test:e2e:debug": "playwright test --debug",
     "test:all": "npm run test:unit && npm run test:e2e",
     "test:regression": "vitest run tests/regression",
-    "test:critical": "playwright test tests/e2e/critical-invariants.spec.ts",
+    "test:critical": "playwright test tests/e2e/critical-invariants.spec.ts tests/e2e/billing-subscription.spec.ts",
     "test:build-imports": "vitest run tests/integration/build-imports.test.ts",
-    "ci:critical": "npm run type-check && npm run build && npm run test:build-imports",
+    "check:prokerala-boundary": "bash scripts/check-prokerala-boundary.sh",
+    "ci:critical": "npm run type-check && npm run build && npm run test:build-imports && npm run check:prokerala-boundary",
     "prepush": "npm run type-check && npm run build",
     "regression-check": "bash scripts/regression-check.sh",
     "pre-deploy": "npm run type-check && npm run build && npm run test:regression"
