--- a/astrosetu/package.json
+++ b/astrosetu/package.json
@@ -24,12 +24,13 @@
     "test:e2e:debug": "playwright test --debug",
     "test:all": "npm run test:unit && npm run test:e2e",
     "test:regression": "vitest run tests/regression",
-    "test:critical": "playwright test tests/e2e/critical-invariants.spec.ts tests/e2e/billing-subscription.spec.ts",
+    "test:critical": "playwright test tests/e2e/critical-invariants.spec.ts tests/e2e/billing-subscription.spec.ts tests/e2e/billing-subscribe-flow.spec.ts",
     "test:build-imports": "vitest run tests/critical/build-imports.test.ts",
     "test:integration:critical": "vitest run tests/integration/idempotency-report-generate.test.ts tests/integration/openai-budget-invariant.test.ts tests/integration/stripe-webhook-signature.test.ts",
+    "test:timing-invariants": "npx vitest run tests/unit/lib/futureWindows.test.ts tests/integration/report-output-future-only.test.ts && npx playwright test tests/e2e/future-only-timing.spec.ts",
     "check:prokerala-boundary": "bash scripts/check-prokerala-boundary.sh",
     "check:env-required": "bash scripts/check-env-required.sh",
-    "ci:critical": "npm run type-check && npm run build && npm run test:build-imports && npm run test:integration:critical && npm run check:prokerala-boundary && npm run check:env-required",
+    "ci:critical": "npm run type-check && npm run build && npm run test:build-imports && npm run test:integration:critical && npm run test:timing-invariants && npm run check:prokerala-boundary && npm run check:env-required",
     "prepush": "npm run type-check && npm run build",
     "regression-check": "bash scripts/regression-check.sh",
     "pre-deploy": "npm run type-check && npm run build && npm run test:regression"
