Fix: First-load race condition - Remove premature auto-recovery effect (ChatGPT feedback)
ROOT CAUSE FIX:
- Removed premature auto-recovery useEffect that raced with main auto-generate flow
- Auto-recovery now ONLY available via manual "Retry" button - never automatic on first load
- This was causing race condition where auto-recovery and main auto-generate both started generation
- Resulted in timer resets and stuck states on first load (year-analysis, full-life)

CHANGES:
1. preview/page.tsx: Removed auto-recovery useEffect (lines 2190-2369)
   - Only main auto-generate flow starts generation automatically
   - Ensures SINGLE orchestration owner for generation start

2. prompts.ts: Fixed futureWindows import (require → import)
   - Moved require() calls to top-level import
   - Prevents build-time module resolution issues
   - Uses: import { getCurrentYear, ensureFutureYear } from "../time/futureWindows"

3. Added E2E test: critical-first-load-generation.spec.ts
   - Tests that only ONE generation request starts within 5 seconds
   - Verifies timer monotonicity (never resets to 0)
   - Asserts completion or error within 180s (no infinite spinner)
   - Fails immediately if second auto-start is reintroduced

4. Updated .cursor/rules: Added "Single Orchestration Owner Rule"
   - Prevents multiple auto-start mechanisms
   - Enforces singleflight guard for generationController.start()

5. Updated documentation:
   - CURSOR_PROGRESS.md: Added first-load race condition fix status
   - package.json: Added new test to test:critical script

STATUS:
✅ Type-check passing (no TypeScript errors)
✅ Single orchestration owner enforced (prevents timer resets)
✅ E2E test added to catch this regression

Fixes: First-load timer reset issue on year-analysis/full-life reports

--- a/astrosetu/package.json
+++ b/astrosetu/package.json
@@ -24,13 +24,14 @@
     "test:e2e:debug": "playwright test --debug",
     "test:all": "npm run test:unit && npm run test:e2e",
     "test:regression": "vitest run tests/regression",
-    "test:critical": "playwright test tests/e2e/critical-invariants.spec.ts tests/e2e/billing-subscription.spec.ts tests/e2e/billing-subscribe-flow.spec.ts",
+    "test:critical": "playwright test tests/e2e/critical-invariants.spec.ts tests/e2e/billing-subscription.spec.ts tests/e2e/billing-subscribe-flow.spec.ts tests/e2e/critical-first-load-generation.spec.ts",
     "test:build-imports": "vitest run tests/critical/build-imports.test.ts",
+    "test:build-no-env-local": "vitest run tests/critical/build-no-env-local.test.ts",
     "test:integration:critical": "vitest run tests/integration/idempotency-report-generate.test.ts tests/integration/openai-budget-invariant.test.ts tests/integration/stripe-webhook-signature.test.ts",
     "test:timing-invariants": "npx vitest run tests/unit/lib/futureWindows.test.ts tests/integration/report-output-future-only.test.ts && npx playwright test tests/e2e/future-only-timing.spec.ts",
     "check:prokerala-boundary": "bash scripts/check-prokerala-boundary.sh",
     "check:env-required": "bash scripts/check-env-required.sh",
-    "ci:critical": "npm run type-check && npm run build && npm run test:build-imports && npm run test:integration:critical && npm run test:timing-invariants && npm run check:prokerala-boundary && npm run check:env-required",
+    "ci:critical": "npm run type-check && npm run build && npm run test:build-imports && npm run test:build-no-env-local && npm run test:integration:critical && npm run test:timing-invariants && npm run check:prokerala-boundary && npm run check:env-required",
     "prepush": "npm run type-check && npm run build",
     "regression-check": "bash scripts/regression-check.sh",
     "pre-deploy": "npm run type-check && npm run build && npm run test:regression"
