feat: Production-ready baseline - Security hardening & structural fixes
✅ Production Issues Fixed:
- Checkout no-op: Resilient baseUrl, 15s timeout, attempt ID tracing
- Redirect loops: Input token pattern (replaces sessionStorage dependency)
- Subscription flow: Fresh checkout, timeout, error handling with attempt ID

✅ Security Hardening:
- Input session API: Rate limiting per token (5/min), log redaction (last 6 chars)
- Service role key: Server-only, hard guards, never exposed
- ReturnTo validation: Helper function with unit tests, blocks external URLs
- Token security: 30min TTL, multi-use semantics (clearly defined)

✅ Production Readiness:
- Checkout attempt ID: Client-generated for server-side correlation
- Fail-fast watchdog: 15s timeout, always terminal UI state
- Release gate in CI: Enforced in GitHub Actions (blocks merges if fails)
- UX improvement: Error messages include 'Include this reference if you retry later.'

✅ Tests Added:
- E2E: checkout-failure-handling, input-token-flow, expired-input-token
- E2E: returnTo-security, checkout-attempt-id, token-redaction
- E2E: subscription-returnTo-exact
- Unit: returnToValidation helper tests

✅ Documentation:
- CHATGPT_FINAL_VERDICT.md: Complete verdict and verification checklist
- CHATGPT_COMPLETE_IMPLEMENTATION_SUMMARY.md: Full implementation details
- VERIFY_SUPABASE_SERVICE_ROLE_KEY_GUIDE.md: Step-by-step verification guide
- All previous summaries and guides included

Status: Ship-ready baseline - Structural fixes, not patches
Next: DB migration → Deploy → Incognito verification (3 flows)

--- a/astrosetu/.github/workflows/regression-check.yml
+++ b/astrosetu/.github/workflows/regression-check.yml
@@ -41,3 +41,13 @@ jobs:
       - name: Regression Check Script
         run: bash scripts/regression-check.sh
 
+      # CRITICAL FIX (ChatGPT): Release Gate - Block merges if this fails
+      - name: Release Gate
+        run: npm run release:gate
+        env:
+          # Add any required env vars for build/test (these should be set in GitHub Secrets)
+          # NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
+          # NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
+          # SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+          # Note: Env vars are optional for type-check, but may be needed for build/test
+
