fix: Critical routing bugs - redirect dead-state, subscribe no-op, purchase loop
- Fix preview redirect dead-state: Remove hasReportTypeInUrl gating, only show Redirecting... when redirectInitiatedRef.current === true
- Fix subscribe no-op: Replace silent return with redirect to input page
- Fix purchase loop: Set input state IMMEDIATELY after loading input_token
- Verify preview never uses stale state: Redirect check uses savedInput (local variable), not state
- Verify returnTo includes full URL: Always includes pathname + search params
- Upgrade tests: Add assertions for input_token/session_id, Enter Your Birth Details NOT visible, Redirecting... NOT visible
- Harden cancel idempotency: Return 200 if already canceled (prevents double-click errors)
- Harden token fetch caching: Comprehensive no-store headers (prevents Next/Vercel caching)
- Add production verification record template

Files changed:
- astrosetu/src/app/ai-astrology/preview/page.tsx
- astrosetu/src/app/ai-astrology/subscription/page.tsx
- astrosetu/tests/e2e/preview-no-dead-redirecting.spec.ts (new)
- astrosetu/tests/e2e/subscription-noop-prevented.spec.ts (new)
- astrosetu/tests/e2e/purchase-redirects-to-input-then-back.spec.ts (upgraded)
- astrosetu/src/app/api/billing/subscription/cancel/route.ts
- astrosetu/src/app/api/ai-astrology/input-session/route.ts
- .cursor/rules
- astrosetu/package.json
- CURSOR_PROGRESS.md
- PRODUCTION_VERIFICATION_RECORD.md (new)
- CHATGPT_ROUTING_DEAD_STATE_FIX_SUMMARY.md (new)
- CHATGPT_VERIFICATION_TIGHTENING_SUMMARY.md (new)
- CHATGPT_FINAL_HARDENING_NOTES_SUMMARY.md (new)
- PRODUCTION_VERIFICATION_CHECKLIST_FINAL_TIGHTENED.md (new)

--- a/ai-astrology-complete-package/CURSOR_RULES/rules
+++ b/ai-astrology-complete-package/CURSOR_RULES/rules
@@ -80,7 +80,27 @@ When a step would trigger a permission popup, “Allow popups safely”, “Resu
   - `stale-session-retry.spec.ts` (stale session handling)
   - `preview-no-processing-without-start.spec.ts` (session_id ≠ processing canary)
   - `subscription-returnTo.spec.ts` (subscription returnTo loop)
+  - `preview-requires-input.spec.ts` (preview redirect to input when no input_token)
+  - `purchase-noop-prevented.spec.ts` (purchase redirect to input, not silent return)
+  - `subscription-input-token-flow.spec.ts` (subscription accepts input_token, cleans URL)
 - **If Cursor changes preview/subscription/input**: Must run `npm run test:critical` and paste output into `CURSOR_PROGRESS.md`.
+
+### Input Ownership & Redirect Invariants (ChatGPT Feedback - CRITICAL - 2026-01-17)
+- **NO redirect gating based on reportType**: Preview page must ALWAYS redirect to `/input` if no input + no valid input_token, regardless of `reportType` in URL.
+- **NO silent returns from purchase/subscribe handlers**: If input is missing, handlers MUST redirect to `/input` with `returnTo`, NEVER silently return.
+- **Unified input_token mechanism**: ALL flows (preview, subscription) must use `input_token` as primary source, sessionStorage as fallback cache only.
+- **Subscription must accept input_token**: Subscription page MUST check `input_token` in URL first, load from API, then clean URL. sessionStorage is fallback only.
+- **Input page must respect flow=subscription**: If `flow=subscription`, input page MUST redirect to `/ai-astrology/subscription?input_token=...` (not preview).
+- **Preview redirect invariant**: If no input + no valid input_token → redirect to `/input` ALWAYS (with returnTo = exact preview URL).
+- **Purchase redirect invariant**: If `handlePurchase()` has no input → redirect to `/input?reportType=...&returnTo=...` ALWAYS, never silently return.
+- **Token error handling**: If `input_token` fetch fails (410/500), show real error UI with "Start again" button that navigates to input, not infinite redirecting.
+- **Redirect timeout invariant (CRITICAL - 2026-01-17 21:15)**: Preview must NEVER show "Redirecting..." for > 2 seconds. If redirect hasn't happened by then, switch to error UI with "Start again" + "Copy debug Ref". This protects from router.push never executes / blocked / hydration edge cases and provides logs.
+- **returnTo loop prevention**: If `returnTo` points to `/ai-astrology/input` or already contains `flow=subscription`, override to safe default:
+  - Subscription flow default: `/ai-astrology/subscription`
+  - Report flow default: `/ai-astrology/preview?reportType=<x>`
+  This avoids "input → subscription → input → ..." loops in weird partial states.
+- **Single-flight guard for purchase/subscribe**: Purchase/Subscribe handlers MUST use single-flight guard (`isSubmittingRef.current`) to prevent double-clicks from causing duplicate API calls. Set `true` immediately, clear on `finally`/route change.
+- **Why these rules exist**: Previous iterations "patched symptoms" (timer, controller state) but real failures are routing/state ownership bugs. Unified input ownership prevents "Redirecting..." dead states and "nothing happens" issues.
 
 ### Technical Debt (Tracked for Future Refactor)
 - **setTimeout autostart** (preview/page.tsx, line ~1242):
